Fixed uneven feature card width (feature.css)

--- a/stylesheets/index/features.scss
+++ b/stylesheets/index/features.scss
@@ -26,6 +26,8 @@
       padding: var(--fs-body);
       gap: 2%;
 
+      width: 100%;
+
       border: 1.5px solid black;
       border-radius: calc(var(--fs-button) * 1);
 
